--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -20,6 +20,7 @@
   }
   
   .image {
+    background-color: black;
     width: 100%;
     object-fit: cover; 
     border-radius: 55px 0px 0px 55px;
