--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -21,7 +21,7 @@
   
   .image {
     width: 100%;
-    /* object-fit: cover; */
+    object-fit: cover; 
     border-radius: 55px 0px 0px 55px;
   }
   
