--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -31,8 +31,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 20px;
-    text-align: center;
+    align-items: center;
     box-sizing: border-box;
   }
   
@@ -192,7 +191,10 @@
     font-size: 23px;
     padding-bottom: 8px;
   }
-  
+  form{
+    text-align: center;
+    max-width: 800px;
+  }
   .right {
     flex: 1;
     display: flex;
