--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -25,7 +25,7 @@
   }
   
   .rightSide {
-    width: 50%;
+    width: 35%;
     display: flex;
     flex-direction: column;
     padding: 40px;
@@ -65,7 +65,6 @@
     border: none;
     border-radius: 55px;
     cursor: pointer;
-    margin-top: 45px;
   }
   
   .button:hover {
@@ -90,33 +89,28 @@
     flex-wrap: wrap;
     gap: 20px;
   }
-  .leftCard {
+  .card {
     width: 305px;
     height: 240px;
     border-radius: 40px;
-    border: 1px solid rgb(139, 139, 139);
+    border: 1px solid #D8D8D8;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    z-index: 1;
   }
-  .rightCard {
-    width: 305px;
-    height: 240px;
-    border-radius: 40px;
-    border: 1px solid rgb(161, 161, 161);
+
+  .imgbox{
+    width: 80%;
+    height: 15vh;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
   }
   .img {
     width: 100%;
-    border-radius: 40px; 
-  }
-  .imge {
-    width: 85%;
-    padding-bottom: 15px;
+    z-index: initial;
   }
   .mainInfo {
     display: flex;
@@ -168,8 +162,8 @@
     
     width: 413px;
     height: 125px;
-    background-color: #f4f4f4;
-    border: 1px solid #ccc;
+    background-color: #fff;
+    border: 1px solid #D8D8D8;
     border-radius: 20px;
     font-size: 1rem;
     gap: 25px;
