--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -1,4 +1,5 @@
 .container {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -7,6 +8,7 @@
     margin-bottom: 150px;
   }
   .mainContent {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,17 +27,23 @@
   }
   
   .rightSide {
-    width: 35%;
+    width: 50%;
+    height: 65vh;
     display: flex;
     flex-direction: column;
-    padding: 40px;
+    justify-content: space-around;
     text-align: center;
     border-radius: 55px;
     background-color: white;
     border: 1px solid #D8D8D8;
     gap: 20px;
   }
-  
+  form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
   .title {
     font-size: 55px;
     color: #0FB1AC;
