--- a/src/components/Different-card/different-card.module.css
+++ b/src/components/Different-card/different-card.module.css
@@ -93,7 +93,7 @@
   .container {
     display: flex;
     flex-direction: column;
-    padding-bottom: 380px;
+
   }
   .infoSection {
     position: absolute;
@@ -137,6 +137,9 @@
 }
 
 @media (max-width: 530px) {
+  .container {
+    padding-bottom: 150px;
+  }
   .button {
       padding: 10px 15px;
       border-radius: 10px;
