--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -8,10 +8,15 @@
     margin-bottom: 150px;
   }
   .mainContent {
-    width: 100%;
+    width: 45%;
+    height: 65vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    border-radius: 55px;
+    background-color: white;
+    border: 1px solid #D8D8D8;
   }
 
     .leftSide {
@@ -27,49 +32,47 @@
   }
   
   .rightSide {
-    width: 50%;
-    height: 65vh;
+    height: 30%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     text-align: center;
-    border-radius: 55px;
-    background-color: white;
-    border: 1px solid #D8D8D8;
-    gap: 20px;
   }
   form{
+    width: 100%;
+    height: 60%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
   }
   .title {
-    font-size: 55px;
+    font-size: 40px;
     color: #0FB1AC;
   }
 
   .description {
-    font-size: 24px;
+    font-size: 20px;
   }
   
   .input {
     width: 80%;
-    height: 50px;
-    margin-bottom: 15px;
-    padding-left: 22px;
+    height: 15%;
+    text-align: start;
     font-size: 1rem;
     border: 1px solid #D8D8D8;
     border-radius: 55px;
     
   }
-  
+  .input::placeholder{
+    transform: translateX(20px);
+  }
   .button {
     width: 80%;
-    height: 60px;
+    height: 15%;
     background-color: #0FB1AC;
     color: #fff;
-    font-size: 1rem;
+    font-size: 20px;
     border: none;
     border-radius: 55px;
     cursor: pointer;
@@ -210,33 +213,48 @@
   }
   
   @media (max-width: 1360px) {
-    .mainContent {
-      width: 90%;
+    /* .title{
+      font-size: 60px;
     }
+    .description{
+      font-size: 30px;
+    }
+    .input::placeholder{
+      font-size: 20px;
+    } */
   }
 
-  @media (max-width: 1140px) {
-
+  @media (max-width: 1259px) {
     .right {
       padding-right: 0;
       }
       .image {
         display: none;
       }
-      .rightSide {
-        flex: 1; 
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        padding: 20px;
-      }
       .leftSide{
         display: none;
       }
 
   }
+  @media (max-width: 1100px) {
+    .title{
+      font-size: 30px;
+    }
+    .description{
+      font-size: 18px;
+    }
+
+  }
   @media (max-width: 830px) {
+    .mainContent {
+      width: 90%;
+    }
+    .title{
+      font-size: 50px;
+    }
+    .description{
+      font-size: 25px;
+    }
     .item {
         width: 100%;
         height: 95px;
@@ -253,6 +271,12 @@
       }
   }
   @media (max-width: 730px) {
+    .title{
+      font-size: 40px;
+    }
+    .description{
+      font-size: 20px;
+    }
     .secondContent {
         display: grid;
         grid-template-columns: 1fr;
@@ -268,10 +292,19 @@
   }
   @media (max-width: 540px) {
     .title {
-        font-size: 40px;
+        font-size: 34px;
+    }
+    .description{
+      font-size: 18px;
     }
   }
-  @media (max-width: 410px) {
+  @media (max-width: 432px) {
+  .title {
+    font-size: 28px;
+  }
+  .description{
+    font-size: 14px;
+  }
     .infoTitle {
       font-size: 40px;
     }
