parallax component's background fixed

--- a/src/components/Different-card/different-card.module.css
+++ b/src/components/Different-card/different-card.module.css
@@ -144,7 +144,9 @@
       padding: 10px 15px;
       border-radius: 10px;
     }
-    
+    .container{
+      padding-bottom: 300px;
+    }  
 }
 @media (max-width: 372px) {
   .cardContainer {
