parallax component's background fixed again

--- a/src/components/Different-card/different-card.module.css
+++ b/src/components/Different-card/different-card.module.css
@@ -149,11 +149,18 @@
     }  
 }
 @media (max-width: 372px) {
+  .container{
+    padding-bottom: 300px;
+  }  
   .cardContainer {
     padding-top: 310px;
   }
 }
+
 @media (max-width: 299px) {
+  .container{
+    padding-bottom: 300px;
+  }  
   .cardContainer {
     padding-top: 350px;
   }
