--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -62,10 +62,8 @@
     font-size: 1rem;
     border: 1px solid #D8D8D8;
     border-radius: 55px;
-    
-  }
-  .input::placeholder{
-    transform: translateX(20px);
+    padding-left: 20px;
+    box-sizing: border-box;
   }
   .button {
     width: 80%;
