--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -43,8 +43,6 @@
 
 .contacts {
   color: white;
-  gap: 200px;
-  margin-top: 70px;
 }
 
 .link {
@@ -58,7 +56,7 @@ color: #177887;
 
 .icons {
   display: flex;
-  gap: 15px;
+  /* gap: 15px; */
   
 }
 .icon { 
@@ -69,7 +67,7 @@ color: #177887;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
+  /* margin-top: 20px; */
 }
 
 .icon:hover {
@@ -162,8 +160,9 @@ margin: 20px 0 50px;
 
 .contacts {
   color: white;
-  gap: 200px;
-  margin-top: 70px;
+  justify-content: space-between;
+  display: flex;
+  flex-direction: column;
 }
 
 .link {
@@ -176,9 +175,7 @@ color: #177887;
 }
 
 .icons {
-  display: flex;
-  gap: 15px;
-  
+  display: flex;  
 }
 .icon { 
   width: 38px;
@@ -188,13 +185,11 @@ color: #177887;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
 }
 
 .icon:hover {
   background-color: #177887;
 }
-
 
 hr {
 margin: 20px 0 50px;
@@ -214,6 +209,12 @@ margin: 20px 0 50px;
     align-items: center;
     gap: 20px;
   }
+  .contacts {
+  color: white;
+    gap: 10px;
+  display: flex;
+  flex-direction: column;
+}
 }
 
 @media (max-width: 768px) {
