--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -56,7 +56,7 @@ color: #177887;
 
 .icons {
   display: flex;
-  /* gap: 15px; */
+  gap: 15px;
   
 }
 .icon { 
@@ -160,7 +160,8 @@ margin: 20px 0 50px;
 
 .contacts {
   color: white;
-  justify-content: space-between;
+  gap: 10px;
+  /* justify-content: space-between; */
   display: flex;
   flex-direction: column;
 }
@@ -175,7 +176,7 @@ color: #177887;
 }
 
 .icons {
-  display: flex;  
+  display: flex;
 }
 .icon { 
   width: 38px;
@@ -211,7 +212,7 @@ margin: 20px 0 50px;
   }
   .contacts {
   color: white;
-    gap: 10px;
+  gap: 10px;
   display: flex;
   flex-direction: column;
 }
